add in project Employee in client: UI states, generic inputs components, meessage CRUD employee and route beck at CRUD employee, add view last edited and created in dashbord' git push origin master

--- a/Employee-AngularRedux+GateMicroservice/web-app/src/app/pages/dashboard/dashboard.component.html
+++ b/Employee-AngularRedux+GateMicroservice/web-app/src/app/pages/dashboard/dashboard.component.html
@@ -76,7 +76,7 @@
         <div class="col-2">&nbsp;</div>
       </div>
     </a>
-    <a class="list-group-item list-group-item-action disabled" *ngFor="let item of [].constructor(numberLastOperation-employeesEdited.length)">
+    <a class="list-group-item list-group-item-action disabled" *ngFor="let itesm of [].constructor(numberLastOperation-employeesEdited.length)">
       <div class="row">
         <div class="col-3">&nbsp;</div>
         <div class="col-3">&nbsp;<br>&nbsp;</div>
