--- a/Employee-AngularRedux+GateMicroservice/web-app/src/app/app.component.html
+++ b/Employee-AngularRedux+GateMicroservice/web-app/src/app/app.component.html
@@ -1,18 +1,19 @@
-<!--<h1>{{ title }}</h1>-->
+<div class="sa" *ngIf="(successAlert$ | async) as successAlert">
+  <div *ngIf="successAlert.show" class="alert alert-success alert-dismissible fade show text-center" role="alert">
+    {{ successAlert.text }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="hideSuccessAlert()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+</div>
 
-<!--&lt;!&ndash;.list+tab&ndash;&gt;-->
-<!--<div class="list"></div>-->
-<!--&lt;!&ndash;div>div*3+tab&ndash;&gt;-->
-<!--<div>-->
-<!--  <div></div>-->
-<!--  <div></div>-->
-<!--  <div></div>-->
-<!--</div>-->
+<div class="ea" *ngIf="(errorAlert$ | async) as errorAlert">
+  <div *ngIf="errorAlert.show" class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+    {{ errorAlert.text }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="hideErrorAlert()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+</div>
 
-
-<!--<dic>-->
-<!--  <ul>-->
-<!--    <li *ngFor="let item of items">{{ item }}</li>-->
-<!--  </ul>-->
-<!--</dic>-->
 <router-outlet></router-outlet>
