add in project Employee in api: add lastModifiedDate record in employee model

--- a/Employee-AngularRedux+GateMicroservice/web-app/src/app/shared/component/input-text-form/input-text-form.component.html
+++ b/Employee-AngularRedux+GateMicroservice/web-app/src/app/shared/component/input-text-form/input-text-form.component.html
@@ -1,11 +1,12 @@
 <div [formGroup]="form" >
   <label  [for]="id">{{ label }}  </label>
+  <!--  no mask -->
   <input class="form-control" [class.is-invalid]="ifRequired(id)" [formControlName]="id" type="text"
          [id]="id" [placeholder]="placeholder" [mask]="mask" [dropSpecialCharacters]="!mask" *ngIf="!mask">
+  <!--  with mask-->
   <input class="form-control" [class.is-invalid]="ifRequired(id)" [formControlName]="id" type="text"
          [id]="id" [placeholder]="placeholder" [mask]="mask" [dropSpecialCharacters]="false" *ngIf="mask">
   <small *ngIf="ifRequired(id)" [id]="'validator-' + id" class="text-danger">This field is required</small>
 </div>
-
 
 
