in project employee on client add: feature delete employee, add lastModifiedDate on employee, some code refactor, add all alert message handle

--- a/Employee-AngularRedux+GateMicroservice/web-app/src/app/pages/dashboard/dashboard.component.html
+++ b/Employee-AngularRedux+GateMicroservice/web-app/src/app/pages/dashboard/dashboard.component.html
@@ -73,7 +73,7 @@
         <div class="col-3">{{employee.phoneNumber}}<br>{{employee.email}}</div>
         <div class="col-2">{{employee.company}}</div>
         <div class="col-2">{{employee.status}}</div>
-        <div class="col-2">&nbsp;</div>
+        <div class="col-2">{{employee.lastModifiedDate}}</div>
       </div>
     </a>
     <a class="list-group-item list-group-item-action disabled" *ngFor="let itesm of [].constructor(numberLastOperation-employeesEdited.length)">
