--- a/Employee-AngularRedux+GateMicroservice/web-app/src/app/pages/dashboard/dashboard.component.css
+++ b/Employee-AngularRedux+GateMicroservice/web-app/src/app/pages/dashboard/dashboard.component.css
@@ -63,3 +63,25 @@ a {
     margin-left: 25px;
   }
 }
+
+.header {
+  font-weight: bold;
+  font-size: 24px;
+  margin-top: 30px;
+}
+
+
+.list-group-header {
+  background-color: inherit;
+  border: 0;
+  font-size: 14px !important;
+  color: #999999;
+  padding-bottom: 0;
+  margin-bottom: 0 !important;
+}
+
+.list-group-item {
+  margin-bottom: 9px;
+  border-top-width: 1px;
+  font-size: 16px;
+}
